# felicity-lims

./: .dockerignore  .gitignore  .prettierrc  ACCESSIBILITY_REVIEW.md  AGENTS.md  AI_ASSISTANT_IMPLEMENTATION_PLAN.md  AI_ASSISTANT_REMAINING.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.dev  Dockerfile.prod  LICENSE  Makefile  NOTICE  PLAN.md  Procfile  README.md  alembic.ini  api-refactor-plan.md  apollo.config.json  billing-refinement-plan.md  bump_reqs.py  codegen.yml  codex-org-plan.md  components.json  docker-compose.alt.aio.yml  docker-compose.alt.standard.yml  docker-compose.dev.yml  docker-compose.prod.native.yml  docker-compose.prod.yml  docker-compose.swarm.yml  env.example  eslint.config.mts  future-plans.md  index.html  llms.txt  logging_config.json  notes.txt  package.json  platform-biling-plan.md  (+14 more)
beak/: __main__.py  almigrator.py  logconf.py  logcong.py  main.py  prestart.py
docs/: api-inventory.md  api-ownership-matrix.md  platform-billing-caps-entitlements.md  platform-billing.md  platform-schema-standardization.md  shared-infrastructure-scoping.md
felicity/: main.py
reads/: AI_ASSISTANT_IMPLEMENTATION_PLAN.md  AI_ASSISTANT_REMAINING.md  DEPLOYMENT_GUIDE.md  Dashboard.md  Deployment.md  HIPAA_COMPLIANCE.md  HIPAA_MIGRATION_STRATEGY.md  Interoperability.md  Introduction.md  Inventory.md  ModulePluginArchitecture.md  Notices.md  Notifications.md  PatientManagement.md  Performance.md  README.md  Referrals.md  ReflexEngineRedesign.md  ReflexRules.md  Reports.md  RoadMap.md  SampleManagement.md  StyleGuide.md  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+4788 files in other folders)
